# easy-terminal

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  pnpm-lock.yaml  prd.json  test-checklist.md  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.ralph-tui/: progress.md  session-meta.json
.ralph-tui/reports/: sequential-summary-56de1401-946e-44eb-8f1d-40607f0beeb7-2026-03-01T04-50-07-610Z.txt  sequential-summary-aac73351-0408-434e-861b-eed2fcaacbeb-2026-03-01T13-16-13-533Z.txt
scripts/: generate-test-report.ts
src/: App.vue  canvas.ts  command-config.ts  command-intelligence.ts  command-intercept.ts  command-suggest.ts  file-editor.ts  file-tree.ts  history-panel.ts  i18n.ts  main.ts  mapping-panel.ts  settings.ts  shortcut-manager.ts  shortcut-panel.ts  sidebar.ts  ssh-panel.ts  styles.css  terminal-manager.ts  terminal-window.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/commands/custom/: conda.json  docker.json  git.json  java.json  kubectl.json  npm.json  pnpm.json  python.json  rust.json  systemctl.json  uv.json  yarn.json
src-tauri/commands/system/: windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  fs.rs  lib.rs  pty.rs  response.rs  settings.rs  ssh.rs
src-tauri/src/commands/: config.rs  docker.rs  file.rs  history.rs  mod.rs  ssh.rs  terminal.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/pty/: mod.rs  session.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/utils/: icons.rs  mod.rs
src/components/: index.ts
src/composables/: index.ts  useAutoComplete.ts  useCommandInterceptor.ts  useDocker.ts  useFileExplorer.ts  useKeyboard.ts  useModifierKeys.ts  useSettings.ts  useShortcuts.ts  useSsh.ts  useSuggestions.ts  useTerminal.ts  useTheme.ts  useUpdater.ts  useWindow.ts
src/config/: terminalThemes.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/services/: base.ts  config.service.ts  docker.service.ts  events.ts  file.service.ts  history.service.ts  index.ts  ssh.service.ts  terminal.service.ts  types.ts  updater.service.ts
src/stores/: connections.ts  fileExplorer.ts  history.ts  index.ts  settings.ts  terminal.ts
src/strategies/: TerminalStrategy.ts
src/test/: e2e-test-env.md  index.ts
tasks/: prd-easy-terminal-prd.md  prd.json
(+89 files in other folders)
