[package]
name = "easy-terminal"
version = "0.1.0"
description = "Easy Terminal - A lightweight cross-platform terminal"
authors = ["you"]
edition = "2021"

[lib]
name = "easy_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
